kong/enable-dev-portal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-dev-portal
  namespace: kong
spec:
  externalTrafficPolicy: Local
  ports:
    - name: portal
      port: 80
      protocol: TCP
      targetPort: 8003
  selector:
    app: ingress-kong
  type: LoadBalancer
