kong/bookinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productpage
  namespace: bookinfo
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /productpage
            pathType: ImplementationSpecific
            backend:
              service:
                name: productpage
                port:
                  number: 9080
