kong/kong-enterprise.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: kong-manager
#   namespace: kong-istio
# spec:
#   hosts:
#     - kong-istio-kong-manager
#   http:
#     - match:
#         - uri:
#             prefix: /manager
#       route:
#         - destination:
#             host: kong-istio-kong-manager
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager
  namespace: kong-istio
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /manager
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-istio-kong-manager
                port:
                  number: 8002
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: kong-admin
#   namespace: kong-istio
# spec:
#   hosts:
#     - kong-istio-kong-admin
#   http:
#     - match:
#         - uri:
#             prefix: /admin
#       route:
#         - destination:
#             host: kong-istio-kong-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-admin
  namespace: kong-istio
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /admin
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-istio-kong-admin
                port:
                  number: 8001
